force-app/main/default/objects/Statistic__c/Statistic__c.object-meta.xml
<CustomObject>
    <description
  >Used for manually tracking stats that are not otherwise tracked in Salesforce, such as monthly circulation counts or web page visits.</description>
    <label>Statistic</label>
    <nameField>
        <displayFormat>ST{000000}</displayFormat>
        <label>Stats Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>