force-app/main/default/objects/Statistic__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description
  >Date of the statistic, usually the first day of a calendar month.</description>
    <inlineHelpText
  >Date of the statistic, usually the first day of a calendar month.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>