force-app/main/default/objects/Statistic__c/fields/Digital__c.field-meta.xml
<CustomField>
    <fullName>Digital__c</fullName>
    <description>Count of Digital Subscribers.</description>
    <inlineHelpText>Count of Digital Subscribers.</inlineHelpText>
    <label>Digital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>