force-app/main/default/objects/Statistic__c/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <description
  >% of subscribers that are opted in to receive this newsletter for this month.</description>
    <formula>Opt_Num__c / ( Digital__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >% of subscribers that are opted in to receive this newsletter for this month.</inlineHelpText>
    <label>Opt-In %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>