force-app/main/default/objects/Statistic__c/fields/Opt_Num__c.field-meta.xml
<CustomField>
    <fullName>Opt_Num__c</fullName>
    <description
  >Number of opt-in subscribers for this newsletter for this month.</description>
    <inlineHelpText
  >Number of opt-in subscribers for this newsletter for this month.</inlineHelpText>
    <label>Opt-In #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>