force-app/main/default/objects/Statistic__c/fields/Print__c.field-meta.xml
<CustomField>
    <fullName>Print__c</fullName>
    <description>Count of print subscribers.</description>
    <inlineHelpText>Count of print subscribers.</inlineHelpText>
    <label>Print</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>