force-app/main/default/objects/Statistic__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the statistic being tracked.</description>
    <inlineHelpText>Title of the statistic being tracked.</inlineHelpText>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government Technology</fullName>
            </value>
            <value>
                <fullName>GOVERNING</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Public CIO</fullName>
            </value>
            <value>
                <fullName>CDE Special Report</fullName>
            </value>
            <value>
                <fullName>Higher Ed</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>GovTech Today</fullName>
            </value>
            <value>
                <fullName>GovTech Social</fullName>
            </value>
            <value>
                <fullName>Digital Communities</fullName>
            </value>
            <value>
                <fullName>Public CIO Newsletter</fullName>
            </value>
            <value>
                <fullName>EM News</fullName>
            </value>
            <value>
                <fullName>Futurestructure</fullName>
            </value>
            <value>
                <fullName>Governing Daily</fullName>
            </value>
            <value>
                <fullName>Better, Faster, Cheaper</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Human Services</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Insider</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>TechWire Weekly</fullName>
            </value>
            <value>
                <fullName>Industry Insider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>