force-app/main/default/objects/Statistic__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description
  >Displays the year of the statistic, for use in reporting.</description>
    <formula>TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the year of the statistic, for use in reporting.</inlineHelpText>
    <label>Year</label>
    <type>Text</type>
</CustomField>