force-app/main/default/objects/Statistic__c/recordTypes/Magazine.recordType-meta.xml
<RecordType>
    <fullName>Magazine</fullName>
    <active>true</active>
    <description
  >Used for tracking the monthly counts of print and digital magazine subscribers.</description>
    <label>Magazine</label>
</RecordType>