force-app/main/default/objects/Statistic__c/recordTypes/Newsletter.recordType-meta.xml
<RecordType>
    <fullName>Newsletter</fullName>
    <active>true</active>
    <description
  >Tracking monthly counts of Newsletter subscribers and opt-ins</description>
    <label>Newsletter</label>
</RecordType>