force-app/main/default/objects/Statistic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <columns>Date__c</columns>
    <columns>Print__c</columns>
    <columns>Digital__c</columns>
    <columns>Opt_Num__c</columns>
    <columns>Opt_In__c</columns>
    <columns>Total__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>