force-app/main/default/objects/Statistic__c/listViews/Test_View.listView-meta.xml
<ListView>
    <fullName>Test_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Test View</label>
</ListView>